src/test/resources/refCompilerOutput/invalid/syntaxErr/while/dooErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:14 -- mismatched input 'doo' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'do'}
1 parser error(s) detected, no further compilation attempted.
